--- a/account.html
+++ b/account.html
@@ -202,6 +202,6 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		</div>
 		<div class="clearfix"> </div>
 	</div>
-	<script src="login.js"></script>
+	<script src="js/login.js"></script>
 </body>
 </html>
