changement de l'index

--- a/product.html
+++ b/product.html
@@ -7,7 +7,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <!DOCTYPE html>
 <html>
 <head>
-<title>Sport A Ecommerce Category Flat Bootstarp Resposive Website Template | Home :: w3layouts</title>
+<title>NextGen Informatiques</title>
 <link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 <script src="js/jquery.min.js"></script>
@@ -62,8 +62,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 							new UISearch( document.getElementById( 'sb-search' ) );
 						</script>
 					<!-- //search-scripts -->
+					
 					<div class="online">
-					<a href="single.html">SHOP ONLINE</a>
+					<a href="single.html" >SHOP ONLINE</a>
 					</div>
 					<div class="clearfix"> </div>
 			</div>
@@ -71,20 +72,33 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<div class="h_menu4"><!-- start h_menu4 -->
 				<a class="toggleMenu" href="#">Menu</a>
 				<ul class="nav">
-					<li class="active"><a href="product.html">Running</a></li>
-					<li><a href="product.html">Fitness</a></li>					
-					<li><a href="product.html">Tennis</a></li>
-					<li><a href="product.html">Football</a></li>
-					<li><a href="product.html">Golf</a></li>
+					<li ><a href="product.html">Nos PCs <i> </i></a>
+						<ul>
+							<li> <a href="http://Pc-Bureau.html">Pc Bureau</a></li>
+							<li> <a href="http://Pc-Gamer.html">Pc Gamer</a></li>
+							<li> <a href="http://Pc-laptop.html">Laptops</a></li>
+						</ul>
+					</li>
+					<li><a href="product.html">Accessoires <i> </i></a>
+						<ul>
+							<li><a href="#">Clavier </a></li>
+							<li><a href="#">Souris </a></li>
+							<li><a href="#">Microphone </a></li>
+							<li><a href="#">Casque </a></li>
+							<li><a href="#">Manette </a></li>
+						</ul>
+					</li>
 					<li><a href="product.html">More <i> </i></a>
 						<ul>
 							<li><a href="contact.html">Contact</a></li>
 							<li><a href="account.html">Account</a></li>
-							<li><a href="register.html">Register</a></li>						</ul>
-					</li>
-				</ul>
+							<li><a href="register.html">Register</a></li>
+						</ul>
+					</li>					
+				</ul>				
 				<script type="text/javascript" src="js/nav.js"></script>
 			</div><!-- end h_menu4 -->
+			
 					<ul class="header-bottom-in">
 						<li ><select class="drop">
 							  <option value="Dollars" class="in-of">Get Active</option>
@@ -102,7 +116,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		</div>
 		<div class="clearfix"> </div>
 	</div>
-	<!---->	
+	<!---->
 <div class="product-grids">
 	<div class="container">
 	<div class="product-top">
