--- a/single.html
+++ b/single.html
@@ -7,83 +7,116 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <!DOCTYPE html>
 <html>
 <head>
-<title>Sport A Ecommerce Category Flat Bootstarp Resposive Website Template | Home :: w3layouts</title>
-<link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
-<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-<script src="js/jquery.min.js"></script>
-<!-- Custom Theme files -->
-<!--theme-style-->
-<link href="css/style.css" rel="stylesheet" type="text/css" media="all" />	
-<!--//theme-style-->
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<meta name="keywords" content="Sport Responsive web template, Bootstrap Web Templates, Flat Web Templates, Andriod Compatible web template, 
-Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, SonyErricsson, Motorola web design" />
-<script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
-<!--fonts-->
-<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700,800' rel='stylesheet' type='text/css'>
-<!--//fonts-->
-<link rel="stylesheet" href="css/etalage.css">
-<script src="js/jquery.etalage.min.js"></script>
-		<script>
-			jQuery(document).ready(function($){
-
-				$('#etalage').etalage({
-					thumb_image_width: 300,
-					thumb_image_height: 400,
-					source_image_width: 900,
-					source_image_height: 1200,
-					show_hint: true,
-					click_callback: function(image_anchor, instance_id){
-						alert('Callback example:\nYou clicked on an image with the anchor: "'+image_anchor+'"\n(in Etalage instance: "'+instance_id+'")');
-					}
-				});
-
-			});
-		</script>
-
-</head>
-<body> 
-<!--header-->
-	<div class="line">
+	<title>NextGen Informatiques</title>
+	<link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
+	<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+	<script src="js/jquery.min.js"></script>
+	<!-- Custom Theme files -->
+	<!--theme-style-->
+	<link href="css/style.css" rel="stylesheet" type="text/css" media="all" />	
+	<!--//theme-style-->
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+	<meta name="keywords" content="Sport Responsive web template, Bootstrap Web Templates, Flat Web Templates, Andriod Compatible web template, 
+	Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, SonyErricsson, Motorola web design" />
+	<script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
+	<!--fonts-->
+	<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700,800' rel='stylesheet' type='text/css'>
+	<!--//fonts-->
 	
-	</div>
-	<div class="header">
-		<div class="logo">
-			<a href="index.html"><img src="images/logo.png" alt="" ></a>
+	</head>
+	<body> 
+	<!--header-->
+		<div class="line">
+		
 		</div>
-		<div  class="header-top">
-			<div class="header-grid">
-				<ul class="header-in">
-						<li ><a href="account.html">My Account   </a> </li>
-						<li>	
-							<select class="in-drop">
-							  <option value="Dollars" class="in-of">Dollars</option>
-							  <option value="Euro" class="in-of">Euro</option>
-							  <option value="Yen" class="in-of">Yen</option>
-							</select>
-						</li>					
-					</ul>
-					<div class="search-box">
-					    <div id="sb-search" class="sb-search">
-							<form>
-								<input class="sb-search-input" placeholder="Enter your search term..." type="search" name="search" id="search">
-								<input class="sb-search-submit" type="submit" value="">
-								<span class="sb-icon-search"> </span>
-							</form>
+		<div class="header">
+			<div class="logo">
+				<a href="index.html"><img src="images/logo.png" alt="" ></a>
+			</div>
+			<div  class="header-top">
+				<div class="header-grid">
+					<ul class="header-in">
+							<li ><a href="account.html">My Account   </a> </li>
+							<li>	
+								<select class="in-drop">
+								  <option value="Dollars" class="in-of">Dollars</option>
+								  <option value="Euro" class="in-of">Euro</option>
+								  <option value="Yen" class="in-of">Yen</option>
+								</select>
+							</li>					
+						</ul>
+						<div class="search-box">
+							<div id="sb-search" class="sb-search">
+								<form>
+									<input class="sb-search-input" placeholder="Enter your search term..." type="search" name="search" id="search">
+									<input class="sb-search-submit" type="submit" value="">
+									<span class="sb-icon-search"> </span>
+								</form>
+							</div>
 						</div>
-				    </div>
-					<!-- search-scripts -->
-					<script src="js/classie.js"></script>
-					<script src="js/uisearch.js"></script>
-						<script>
-							new UISearch( document.getElementById( 'sb-search' ) );
-						</script>
-					<!-- //search-scripts -->
-					<div class="online">
-					<a href="single.html">SHOP ONLINE</a>
-					</div>
-					<div class="clearfix"> </div>
+						<!-- search-scripts -->
+						<script src="js/classie.js"></script>
+						<script src="js/uisearch.js"></script>
+							<script>
+								new UISearch( document.getElementById( 'sb-search' ) );
+							</script>
+						<!-- //search-scripts -->
+						
+						<div class="online">
+						<a href="single.html" >SHOP ONLINE</a>
+						</div>
+						<div class="clearfix"> </div>
+				</div>
+				<div class="header-bottom">
+					<div class="h_menu4"><!-- start h_menu4 -->
+					<a class="toggleMenu" href="#">Menu</a>
+					<ul class="nav">
+						<li ><a href="product.html">Nos PCs <i> </i></a>
+							<ul>
+								<li> <a href="http://Pc-Bureau.html">Pc Bureau</a></li>
+								<li> <a href="http://Pc-Gamer.html">Pc Gamer</a></li>
+								<li> <a href="http://Pc-laptop.html">Laptops</a></li>
+							</ul>
+						</li>
+						<li><a href="product.html">Accessoires <i> </i></a>
+							<ul>
+								<li><a href="#">Clavier </a></li>
+								<li><a href="#">Souris </a></li>
+								<li><a href="#">Microphone </a></li>
+								<li><a href="#">Casque </a></li>
+								<li><a href="#">Manette </a></li>
+							</ul>
+						</li>
+						<li><a href="product.html">More <i> </i></a>
+							<ul>
+								<li><a href="contact.html">Contact</a></li>
+								<li><a href="account.html">Account</a></li>
+								<li><a href="register.html">Register</a></li>
+							</ul>
+						</li>					
+					</ul>				
+					<script type="text/javascript" src="js/nav.js"></script>
+				</div><!-- end h_menu4 -->
+				
+						<ul class="header-bottom-in">
+							<li ><select class="drop">
+								  <option value="Dollars" class="in-of">Get Active</option>
+								  <option value="Euro" class="in-of">Get Active1</option>
+								  <option value="Yen" class="in-of">Get Active2</option>
+								</select> </li>
+							<li ><select class="drop">
+								  <option value="Dollars" class="in-of">Community</option>
+								  <option value="Euro" class="in-of">Community1</option>
+								  <option value="Yen" class="in-of">Community2</option>
+								</select></li>		
+						</ul>
+				<div class="clearfix"> </div>
+			</div>
+			</div>
+			<div class="clearfix"> </div>
+		</div>
+		<!---->
 			</div>
 			<div class="header-bottom">
 				<div class="h_menu4"><!-- start h_menu4 -->
