changemend du fichier register js

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<ul class="nav">
 					<li ><a href="product.html">Nos PCs <i> </i></a>
 						<ul>
-							<li> <a href="http://Pc-Bureau.html">Pc Bureau</a></li>
+							<li> <a href="http://Pc-Bureau.html">Desk Office</a></li>
 							<li> <a href="http://Pc-Gamer.html">Pc Gamer</a></li>
 							<li> <a href="http://Pc-laptop.html">Laptops</a></li>
 						</ul>
