--- a/register.html
+++ b/register.html
@@ -200,6 +200,6 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	</div>
 
 
-	<script src="register.js"></script>
+	<script src="js/register.js"></script>
 </body>
 </html>
