--- a/product.html
+++ b/product.html
@@ -19,23 +19,22 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="keywords" content="Sport Responsive web template, Bootstrap Web Templates, Flat Web Templates, Andriod Compatible web template, 
 Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, SonyErricsson, Motorola web design" />
-	<script
-		type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
-	<!--fonts-->
-	<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700,800' rel='stylesheet' type='text/css'>
-	<!--//fonts-->
+<script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
+<!--fonts-->
+<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700,800' rel='stylesheet' type='text/css'>
+<!--//fonts-->
 
 </head>
-<body>
-	<!--header-->
+<body> 
+<!--header-->
 	<div class="line">
-
+	
 	</div>
 	<div class="header">
 		<div class="logo">
-			<a href="index.html"><img src="images/logo.png" alt=""></a>
+			<a href="index.html"><img src="images/logo.png" alt="" ></a>
 		</div>
-		<div class="header-top">
+		<div  class="header-top">
 			<div class="header-grid">
 				<ul class="header-in">
 						<li ><a href="account.html">My Account   </a> </li>
@@ -67,18 +66,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<div class="online">
 					<a href="single.html" >SHOP ONLINE</a>
 					</div>
-				</div>
-				<!-- search-scripts -->
-				<script src="js/classie.js"></script>
-				<script src="js/uisearch.js"></script>
-				<script>
-					new UISearch(document.getElementById('sb-search'));
-				</script>
-				<!-- //search-scripts -->
-				<div class="online">
-					<a href="single.html">SHOP ONLINE</a>
-				</div>
-				<div class="clearfix"> </div>
+					<div class="clearfix"> </div>
 			</div>
 			<div class="header-bottom">
 				<div class="h_menu4"><!-- start h_menu4 -->
@@ -170,167 +158,13 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		</div>
 	<div class="clearfix"> </div>
 	</div>	
-	<div class="product-top">
-		<div class="col-md-4 grid-product-in">	
-		<div class=" product-grid">	
-			<a href="single.html"><img class="img-responsive " src="images/pr3.png" alt=""></a>		
-			<div class="shoe-in">
-				<h6><a href="single.html">Lorem Ipsum is simply dummy </a></h6>
-				<label>$67.99</label>
-				<a href="single.html" class="store">FIND A STORE</a>
-			</div>
-			
-			<b class="plus-on">+</b>
-		</div>	
-		</div>
-	<div class="col-md-4 grid-product-in">	
-		<div class=" product-grid">	
-			<a href="single.html"><img class="img-responsive " src="images/pr4.png" alt=""></a>
-			<div class="shoe-in">
-				<h6><a href="single.html">Lorem Ipsum is simply dummy </a></h6>
-				<label>$67.99</label>
-				<a href="single.html" class="store">FIND A STORE</a>
-			</div>
-			
-			<b class="plus-on">+</b>
-		</div>
-		</div>
-		<div class="col-md-4 grid-product-in">	
-		<div class=" product-grid">	
-			<a href="single.html"><img class="img-responsive " src="images/sh.png" alt=""></a>
-			<div class="shoe-in">
-				<h6><a href="single.html">Lorem Ipsum is simply dummy </a></h6>
-				<label>$67.99</label>
-				<a href="single.html" class="store">FIND A STORE</a>
-			</div>
-		</div>
-		<div class="clearfix"> </div>
+	
+	<div class="clearfix"> </div>
 	</div>
-	<!---->
-	<button onclick="add()" type="button" class="btn btn-primary">Our products</button>
-	<div class="product-grids">
-		<div class="container">
-			<div class="product-top">
-				<div class="col-md-4 grid-product-in">
-					<div class=" product-grid">
-						<a href="single.html"><img class="img-responsive " src="images/pr.png" alt=""></a>
-						<div class="shoe-in">
-							<h6 id="firstphoto"><a href="single.html">Lorem Ipsum is simply dummy </a></h6>
-							<label id="firstprice">$67.99</label>
-							<a href="single.html" class="store">FIND A STORE</a>
-						</div>
-
-						<b class="plus-on">+</b>
-					</div>
-				</div>
-				<div class="col-md-4 grid-product-in">
-					<div class=" product-grid">
-						<a href="single.html"><img class="img-responsive " src="images/pr1.png" alt=""></a>
-						<div class="shoe-in">
-							<h6><a href="single.html">Lorem Ipsum is simply dummy </a></h6>
-							<label>$67.99</label>
-							<a href="single.html" class="store">FIND A STORE</a>
-						</div>
-
-						<b class="plus-on">+</b>
-					</div>
-				</div>
-				<div class="col-md-4 grid-product-in">
-					<div class=" product-grid">
-						<a href="single.html"><img class="img-responsive " src="images/pr2.png" alt=""></a>
-						<div class="shoe-in">
-							<h6><a href="single.html">Lorem Ipsum is simply dummy </a></h6>
-							<label>$67.99</label>
-							<a href="single.html" class="store">FIND A STORE</a>
-						</div>
-
-						<b class="plus-on">+</b>
-					</div>
-				</div>
-				<div class="clearfix"> </div>
-			</div>
-			<div class="product-top">
-				<div class="col-md-4 grid-product-in">
-					<div class=" product-grid">
-						<a href="single.html"><img class="img-responsive " src="images/pr3.png" alt=""></a>
-						<div class="shoe-in">
-							<h6><a href="single.html">Lorem Ipsum is simply dummy </a></h6>
-							<label>$67.99</label>
-							<a href="single.html" class="store">FIND A STORE</a>
-						</div>
-
-						<b class="plus-on">+</b>
-					</div>
-				</div>
-				<div class="col-md-4 grid-product-in">
-					<div class=" product-grid">
-						<a href="single.html"><img class="img-responsive " src="images/pr4.png" alt=""></a>
-						<div class="shoe-in">
-							<h6><a href="single.html">Lorem Ipsum is simply dummy </a></h6>
-							<label>$67.99</label>
-							<a href="single.html" class="store">FIND A STORE</a>
-						</div>
-
-						<b class="plus-on">+</b>
-					</div>
-				</div>
-				<div class="col-md-4 grid-product-in">
-					<div class=" product-grid">
-						<a href="single.html"><img class="img-responsive " src="images/sh.png" alt=""></a>
-						<div class="shoe-in">
-							<h6><a href="single.html">Lorem Ipsum is simply dummy </a></h6>
-							<label>$67.99</label>
-							<a href="single.html" class="store">FIND A STORE</a>
-						</div>
-
-						<b class="plus-on">+</b>
-					</div>
-				</div>
-				<div class="clearfix"> </div>
-			</div>
-			<div class="product-top">
-				<div class="col-md-4 grid-product-in">
-					<div class=" product-grid">
-						<a href="single.html"><img class="img-responsive " src="images/sh2.png" alt=""></a>
-						<div class="shoe-in">
-							<h6><a href="single.html">Lorem Ipsum is simply dummy </a></h6>
-							<label>$67.99</label>
-							<a href="single.html" class="store">FIND A STORE</a>
-						</div>
-
-						<b class="plus-on">+</b>
-					</div>
-				</div>
-				<div class="col-md-4 grid-product-in">
-					<div class=" product-grid">
-						<a href="single.html"><img class="img-responsive " src="images/pr1.png" alt=""></a>
-						<div class="shoe-in">
-							<h6><a href="single.html">Lorem Ipsum is simply dummy </a></h6>
-							<label>$67.99</label>
-							<a href="single.html" class="store">FIND A STORE</a>
-						</div>
-
-						<b class="plus-on">+</b>
-					</div>
-				</div>
-				<div class="col-md-4 grid-product-in">
-					<div class=" product-grid">
-						<a href="single.html"><img class="img-responsive " src="images/pr.png" alt=""></a>
-						<div class="shoe-in">
-							<h6><a href="single.html">Lorem Ipsum is simply dummy </a></h6>
-							<label>$67.99</label>
-							<a href="single.html" class="store">FIND A STORE</a>
-						</div>
-
-						<b class="plus-on">+</b>
-					</div>
-				</div>
-				<div class="clearfix"> </div>
-			</div>
-		</div>
 	</div>
+</div>
 	<!---->
-	<!--footer-->
+<!--footer-->
 	<div class="footer">
 		<div class="col-md-3 footer-left">
 			<h4>Sports</h4>
@@ -348,7 +182,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<li><a href="#">SPECIAL</a></li>
 					<li><a href="#">BRAND EVENTS</a></li>
 				</ul>
-				<div class="clearfix"> </div>
+			<div class="clearfix"> </div>
 			</div>
 		</div>
 		<div class="col-md-3 footer-left left-footer">
@@ -367,16 +201,16 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<li><a href="#">Event Map</a></li>
 					<li><a href="#">Challange the world</a></li>
 				</ul>
-				<div class="clearfix"> </div>
+			<div class="clearfix"> </div>
 			</div>
 		</div>
 		<div class="col-md-2 footer-left left-footer">
 			<h4>Your Account</h4>
-			<ul class="run-grid-in">
-				<li><a href="account.html">Login</a></li>
-				<li><a href="#">My Sports</a></li>
-				<li><a href="#">My Events</a></li>
-			</ul>
+				<ul class="run-grid-in">
+					<li><a href="account.html">Login</a></li>
+					<li><a href="#">My Sports</a></li>
+					<li><a href="#">My Events</a></li>
+				</ul>
 		</div>
 		<div class="col-md-4 footer-left left-footer">
 			<ul class="social-in">
@@ -391,14 +225,12 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<h6>NRL: five things we learned this weekend</h6>
 				<p>In support of suburban games; Warriors rip</p>
 				<a href="register.html" class="sign">SIGN UP AND GET MORE</a>
-				<p class="footer-class"> © 2015 Sport All Rights Reserved | Template by <a href="http://w3layouts.com/"
-						target="_blank">W3layouts</a> </p>
+				<p class="footer-class"> © 2015 Sport All Rights Reserved | Template by  <a href="http://w3layouts.com/" target="_blank">W3layouts</a> </p>
 			</div>
-
+			
 		</div>
 		<div class="clearfix"> </div>
 	</div>
 	<script src="js/product.js"></script>
 </body>
-
 </html>
