--- a/index.html
+++ b/index.html
@@ -98,19 +98,6 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				</ul>				
 				<script type="text/javascript" src="js/nav.js"></script>
 			</div><!-- end h_menu4 -->
-			
-					<ul class="header-bottom-in">
-						<li ><select class="drop">
-							  <option value="Dollars" class="in-of">Get Active</option>
-							  <option value="Euro" class="in-of">Get Active1</option>
-							  <option value="Yen" class="in-of">Get Active2</option>
-							</select> </li>
-						<li ><select class="drop">
-							  <option value="Dollars" class="in-of">Community</option>
-							  <option value="Euro" class="in-of">Community1</option>
-							  <option value="Yen" class="in-of">Community2</option>
-							</select></li>		
-					</ul>
 			<div class="clearfix"> </div>
 		</div>
 		</div>
@@ -120,7 +107,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	<div class="banner">
 	<div class="container">
 		<div class="banner-matter">
-			<h1>Get active get running<span>push your limits</h1>
+			<h1  style="color: rgb(0, 172, 0);">RTX 3090 Graphics Card <span style="color: white;">New in NextGen Informatiques</h1>
 			<div class="out">
 				<a href="single.html" class="find">FIND OUT MORE </a>
 				<a href="single.html" class="shop">SHOP</a>
