--- a/product.html
+++ b/product.html
@@ -27,112 +27,89 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 
 </head>
 <body>
-	<!--header-->
-	<div class="line">
-
+	
+<!--header-->
+<div class="line">
+	
+</div>
+<div class="header">
+	<div class="logo">
+		<a href="index.html"><img src="images/logo.png" alt="" ></a>
 	</div>
-	<div class="header">
-		<div class="logo">
-			<a href="index.html"><img src="images/logo.png" alt=""></a>
-		</div>
-		<div class="header-top">
-			<div class="header-grid">
-				<ul class="header-in">
-						<li ><a href="account.html">My Account   </a> </li>
-						<li>	
-							<select class="in-drop">
-							  <option value="Dollars" class="in-of">Dollars</option>
-							  <option value="Euro" class="in-of">Euro</option>
-							  <option value="Yen" class="in-of">Yen</option>
-							</select>
-						</li>					
-					</ul>
-					<div class="search-box">
-					    <div id="sb-search" class="sb-search">
-							<form>
-								<input class="sb-search-input" placeholder="Enter your search term..." type="search" name="search" id="search">
-								<input class="sb-search-submit" type="submit" value="">
-								<span class="sb-icon-search"> </span>
-							</form>
-						</div>
-				    </div>
-					<!-- search-scripts -->
-					<script src="js/classie.js"></script>
-					<script src="js/uisearch.js"></script>
-						<script>
-							new UISearch( document.getElementById( 'sb-search' ) );
-						</script>
-					<!-- //search-scripts -->
-					
-					<div class="online">
-					<a href="single.html" >SHOP ONLINE</a>
+	<div  class="header-top">
+		<div class="header-grid">
+			<ul class="header-in">
+					<li ><a href="account.html">My Account   </a> </li>
+					<li>	
+						<select class="in-drop">
+						  <option value="Dollars" class="in-of">Dollars</option>
+						  <option value="Euro" class="in-of">Euro</option>
+						  <option value="Yen" class="in-of">Yen</option>
+						</select>
+					</li>					
+				</ul>
+				<div class="search-box">
+					<div id="sb-search" class="sb-search">
+						<form>
+							<input class="sb-search-input" placeholder="Enter your search term..." type="search" name="search" id="search">
+							<input class="sb-search-submit" type="submit" value="">
+							<span class="sb-icon-search"> </span>
+						</form>
 					</div>
 				</div>
 				<!-- search-scripts -->
 				<script src="js/classie.js"></script>
 				<script src="js/uisearch.js"></script>
-				<script>
-					new UISearch(document.getElementById('sb-search'));
-				</script>
+					<script>
+						new UISearch( document.getElementById( 'sb-search' ) );
+					</script>
 				<!-- //search-scripts -->
+				
 				<div class="online">
-					<a href="single.html">SHOP ONLINE</a>
+				<a href="single.html" >SHOP ONLINE</a>
 				</div>
 				<div class="clearfix"> </div>
-			</div>
-			<div class="header-bottom">
-				<div class="h_menu4"><!-- start h_menu4 -->
-				<a class="toggleMenu" href="#">Menu</a>
-				<ul class="nav">
-					<li ><a href="product.html">Nos PCs <i> </i></a>
-						<ul>
-							<li> <a href="http://Pc-Bureau.html">Pc Bureau</a></li>
-							<li> <a href="http://Pc-Gamer.html">Pc Gamer</a></li>
-							<li> <a href="http://Pc-laptop.html">Laptops</a></li>
-						</ul>
-					</li>
-					<li><a href="product.html">Accessoires <i> </i></a>
-						<ul>
-							<li><a href="#">Clavier </a></li>
-							<li><a href="#">Souris </a></li>
-							<li><a href="#">Microphone </a></li>
-							<li><a href="#">Casque </a></li>
-							<li><a href="#">Manette </a></li>
-						</ul>
-					</li>
-					<li><a href="product.html">More <i> </i></a>
-						<ul>
-							<li><a href="contact.html">Contact</a></li>
-							<li><a href="account.html">Account</a></li>
-							<li><a href="register.html">Register</a></li>
-						</ul>
-					</li>					
-				</ul>				
-				<script type="text/javascript" src="js/nav.js"></script>
-			</div><!-- end h_menu4 -->
-			
-					<ul class="header-bottom-in">
-						<li ><select class="drop">
-							  <option value="Dollars" class="in-of">Get Active</option>
-							  <option value="Euro" class="in-of">Get Active1</option>
-							  <option value="Yen" class="in-of">Get Active2</option>
-							</select> </li>
-						<li ><select class="drop">
-							  <option value="Dollars" class="in-of">Community</option>
-							  <option value="Euro" class="in-of">Community1</option>
-							  <option value="Yen" class="in-of">Community2</option>
-							</select></li>		
+		</div>
+		<div class="header-bottom">
+			<div class="h_menu4"><!-- start h_menu4 -->
+			<a class="toggleMenu" href="#">Menu</a>
+			<ul class="nav">
+				<li ><a href="product.html">Nos PCs <i> </i></a>
+					<ul>
+						<li> <a href="http://Pc-Bureau.html">Desk Office</a></li>
+						<li> <a href="http://Pc-Gamer.html">Pc Gamer</a></li>
+						<li> <a href="http://Pc-laptop.html">Laptops</a></li>
 					</ul>
-			<div class="clearfix"> </div>
-		</div>
-		</div>
+				</li>
+				<li><a href="product.html">Accessoires <i> </i></a>
+					<ul>
+						<li><a href="#">Clavier </a></li>
+						<li><a href="#">Souris </a></li>
+						<li><a href="#">Microphone </a></li>
+						<li><a href="#">Casque </a></li>
+						<li><a href="#">Manette </a></li>
+					</ul>
+				</li>
+				<li><a href="product.html">More <i> </i></a>
+					<ul>
+						<li><a href="contact.html">Contact</a></li>
+						<li><a href="account.html">Account</a></li>
+						<li><a href="register.html">Register</a></li>
+					</ul>
+				</li>					
+			</ul>				
+			<script type="text/javascript" src="js/nav.js"></script>
+		</div><!-- end h_menu4 -->
 		<div class="clearfix"> </div>
 	</div>
-	<!---->
+	</div>
+	<div class="clearfix"> </div>
+</div>
+<!---->
 <div class="product-grids">
-	<div class="container">
+	<button onclick="add()" type="button" class="btn btn-primary">Our products</button>
+	<div class="container">	
 	<div class="product-top">
-		<button onclick="add()" type="button" class="btn btn-primary">Our products</button>
 		<div class="col-md-4 grid-product-in">	
 		<div class=" product-grid">	
 			<a href="single.html"><img class="img-responsive " src="images/pr.png" alt=""></a>		
