--- a/index.html
+++ b/index.html
@@ -144,19 +144,19 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		<div id="owl-demo" class="owl-carousel text-center">
 			<div class="item">
 				<a href="single.html" title="image" rel="title1">
-					<img class="img-responsive " src="images/pic.jpg" alt="">
+					<img class="img-responsive " width="auto" height="100%" src="images/MSI-GL63-laptop.jpeg" alt="">
 				<div class="run">
 					<i> </i>
-					<p>RUNNING</p>
+					<p>MSI GL63 Gaming Laptop</p>
 				</div>
 				</a>
 			</div>
 			<div class="item">
 				<a href="single.html" title="image" rel="title1">
-					<img class="img-responsive " src="images/pic1.jpg" alt="">
+					<img class="img-responsive "  width="auto" height="auto"  src="images/ASUS-ROG.jpg" alt="">
 				<div class="run">
-					<i class="foot-in"> </i>
-					<p>FOOTBALL</p>
+					
+					<p>	ASUS - ROG G531GT0-BI7N6 Notebook PC 15.6" Gaming Laptop</p>
 				</div>
 				</a>
 			</div>
