--- a/product.html
+++ b/product.html
@@ -110,12 +110,14 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	<button onclick="add()" type="button" class="btn btn-primary">Our products</button>
 	<div class="container">	
 	<div class="product-top">
+		<div id="products"> </div>
 		<div class="col-md-4 grid-product-in">	
 		<div class=" product-grid">	
-			<a href="single.html"><img class="img-responsive " src="images/pr.png" alt=""></a>		
+			<a href="single.html"><img class="img-responsive " src="images/MSI-GL63-laptop.jpeg" alt=""></a>		
 			<div class="shoe-in">
-				<h6><a href="single.html">Lorem Ipsum is simply dummy </a></h6>
-				<label>$67.99</label>
+				<h6><a href="single.html"> 
+					MSI GL63 Gaming Laptop 15.6" Intel Core i7-8750H, NVIDIA GeForce GTX 1050, 8gb RAM, 256gb SSD + 1TB HDD</a></h6>
+				<label>$1099.89</label>
 				<a href="single.html" class="store">FIND A STORE</a>
 			</div>
 			
@@ -124,10 +126,11 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		</div>
 		<div class="col-md-4 grid-product-in">	
 		<div class=" product-grid">	
-			<a href="single.html"><img class="img-responsive " src="images/pr1.png" alt=""></a>
+			<a href="single.html"><img class="img-responsive " src="images/ASUS-ROG.jpg" alt=""></a>
 			<div class="shoe-in">
-				<h6><a href="single.html">Lorem Ipsum is simply dummy </a></h6>
-				<label>$67.99</label>
+				<h6><a href="single.html">
+					ASUS - ROG G531GT0-BI7N6 Notebook PC 15.6" Gaming Laptop - Intel Core i7 - 8GB Memory - NVIDIA GeForce GTX 1650 - 512GB Solid State Drive - Black </a></h6>
+				<label>$1289.99</label>
 				<a href="single.html" class="store">FIND A STORE</a>
 			</div>
 			
@@ -221,6 +224,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		<div class="clearfix"> </div>
 	</div>
 	<script src="js/product.js"></script>
+	<script src="js/list-product.js"></script>
 </body>
 
 </html>
