--- a/product.html
+++ b/product.html
@@ -25,7 +25,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <!--//fonts-->
 
 </head>
-<body>
+<body onload="storageonload()">
 	
 <!--header-->
 <div class="line">
@@ -106,11 +106,11 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 </div>
 <!---->
 <div class="product-grids">
-	<button onclick="add()" type="button" class="btn btn-primary">Our products</button>
+	<a href="add-product.html" class="btn btn-primary">Add product</a>
 	<div class="container">	
 	<div class="product-top">
 		<div id="products"> </div>
-		<div class="col-md-4 grid-product-in">	
+		<!-- <div class="col-md-4 grid-product-in">	
 		<div class=" product-grid">	
 			<a href="single.html"><img class="img-responsive " src="images/MSI-GL63-laptop.jpeg" alt=""></a>		
 			<div class="shoe-in">
@@ -122,8 +122,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			
 			<b class="plus-on">+</b>
 		</div>	
-		</div>
-		<div class="col-md-4 grid-product-in">	
+		</div> -->
+		<!-- <div class="col-md-4 grid-product-in">	
 		<div class=" product-grid">	
 			<a href="single.html"><img class="img-responsive " src="images/ASUS-ROG.jpg" alt=""></a>
 			<div class="shoe-in">
@@ -135,28 +135,11 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			
 			<b class="plus-on">+</b>
 		</div>
-		</div>
-		<div class="col-md-4 grid-product-in">	
-		<div class=" product-grid">	
-			<a href="single.html"><img class="img-responsive " src="images/pr2.png" alt=""></a>
-			<div class="shoe-in">
-				<h6><a href="single.html">Lorem Ipsum is simply dummy </a></h6>
-				<label>$67.99</label>
-				<a href="single.html" class="store">FIND A STORE</a>
-			</div>
+		</div> -->
+		
 	
-			<b class="plus-on">+</b>
-		</div>
-		</div>
-	<div class="clearfix"> </div>
-	</div>	
-	
-<<<<<<< HEAD
 	<div class="clearfix"> </div>
 	</div>
-=======
-	
->>>>>>> 6f626468818a8bf3b7dfed3a3bdcbe0b46f1711d
 	</div>
 </div>
 	<!---->
