--- a/edit-product.html
+++ b/edit-product.html
@@ -1,9 +1,3 @@
-<!--A Design by W3layouts 
-Author: W3layout
-Author URL: http://w3layouts.com
-License: Creative Commons Attribution 3.0 Unported
-License URL: http://creativecommons.org/licenses/by/3.0/
--->
 <!DOCTYPE html>
 <html>
 <head>
@@ -133,7 +127,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                 <!-- accept attribut pour selectionner uniquement fichiers images -->
                 <input type="file" class="file-form-control" id="picture" accept="image/*">
               </div>
-            <button type="button" class="btn btn-primary" onclick="add()">Add</button>
+            <button type="button" class="btn btn-primary" onclick="edit()">Edit</button>
           </form>
       </div>
 	</div>
@@ -208,5 +202,6 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		<div class="clearfix"> </div>
 	</div>
 	<script src="js/product.js"></script>
+    <script src="js/edit-product.js"></script>
 </body>
 </html>
