--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	</div>
 	<div class="header">
 		<div class="logo">
-			<a href="index.html"><img src="images/logo.png" alt="" ></a>
+			<a href="index.html"><img src="images/nextgenit.png" width="80%" height="auto" style="padding-top: 20px;" alt="" ></a>
 		</div>
 		<div  class="header-top">
 			<div class="header-grid">
