--- a/single.html
+++ b/single.html
@@ -32,7 +32,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 		</div>
 		<div class="header">
 			<div class="logo">
-				<a href="index.html"><img src="images/logo.png" alt="" ></a>
+				<a href="index.html"><img src="images/nextgenit.png" width="80%" height="auto" style="padding-top: 20px;" alt="" ></a>
 			</div>
 			<div  class="header-top">
 				<div class="header-grid">
