--- a/edit-product.html
+++ b/edit-product.html
@@ -127,7 +127,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                 <!-- accept attribut pour selectionner uniquement fichiers images -->
                 <input type="file" class="file-form-control" id="picture" accept="image/*">
               </div>
-            <button type="button" class="btn btn-primary" onclick="edit()">Edit</button>
+			  <input type="hidden" value="" id="index">
+            <button type="button" class="btn btn-primary" onclick="modify()">Update</button>
           </form>
       </div>
 	</div>
