--- a/account.html
+++ b/account.html
@@ -72,14 +72,14 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<div class="h_menu4"><!-- start h_menu4 -->
 			<a class="toggleMenu" href="#">Menu</a>
 			<ul class="nav">
-				<li ><a href="product.html">Nos PCs <i> </i></a>
+				<li ><a href="#">Nos PCs <i> </i></a>
 					<ul>
-						<li> <a href="http://Pc-Bureau.html">Desk Office</a></li>
-						<li> <a href="http://Pc-Gamer.html">Pc Gamer</a></li>
-						<li> <a href="http://Pc-laptop.html">Laptops</a></li>
+						<li> <a href="#">Desk Office</a></li>
+						<li> <a href="#">Pc Gamer</a></li>
+						<li> <a href="#">Laptops</a></li>
 					</ul>
 				</li>
-				<li><a href="product.html">Accessoires <i> </i></a>
+				<li><a href="#">Accessoires <i> </i></a>
 					<ul>
 						<li><a href="#">Clavier </a></li>
 						<li><a href="#">Souris </a></li>
@@ -88,13 +88,16 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						<li><a href="#">Manette </a></li>
 					</ul>
 				</li>
-				<li><a href="product.html">More <i> </i></a>
+				<li><a href="#">More <i> </i></a>
 					<ul>
 						<li><a href="contact.html">Contact</a></li>
 						<li><a href="account.html">Account</a></li>
 						<li><a href="register.html">Register</a></li>
 					</ul>
-				</li>					
+				</li>	
+				<li>
+					<a href="product.html"> Our Products </a>
+				</li>			
 			</ul>				
 			<script type="text/javascript" src="js/nav.js"></script>
 		</div><!-- end h_menu4 -->
@@ -105,9 +108,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 </div>
 	<!---->	
 <div class="container">
-		<div class="account">
-		<h2>Account</h2>
-		<div class="account-pass">
+		<div class="account" style="margin: auto; width: 70%;">
+		<h2>LOGIN</h2>
+		<div class="account-pass" style="margin: auto;">
 		<div class="col-md-7 account-top">
 			<form>
 				
@@ -122,12 +125,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<input type="button" value="Login" onclick="login()">
 			</form>
 		</div>
-		<div class="col-md-5 left-account ">
-			<a href="single.html"><img class="img-responsive " src="images/ac.png" alt=""></a>
-			<div class="five">
-			<h1>25% </h1><span>discount</span>
-			</div>
-			<a href="register.html" class="create">Create an account</a>
+		
 <div class="clearfix"> </div>
 		</div>
 	<div class="clearfix"> </div>
