--- a/edit-product.html
+++ b/edit-product.html
@@ -66,14 +66,14 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<div class="h_menu4"><!-- start h_menu4 -->
 				<a class="toggleMenu" href="#">Menu</a>
 				<ul class="nav">
-					<li ><a href="product.html">Nos PCs <i> </i></a>
+					<li ><a href="#">Nos PCs <i> </i></a>
 						<ul>
-							<li> <a href="http://Pc-Bureau.html">Pc Bureau</a></li>
-							<li> <a href="http://Pc-Gamer.html">Pc Gamer</a></li>
-							<li> <a href="http://Pc-laptop.html">Laptops</a></li>
+							<li> <a href="#">Desk Office</a></li>
+							<li> <a href="#">Pc Gamer</a></li>
+							<li> <a href="#">Laptops</a></li>
 						</ul>
 					</li>
-					<li><a href="product.html">Accessoires <i> </i></a>
+					<li><a href="#">Accessoires <i> </i></a>
 						<ul>
 							<li><a href="#">Clavier </a></li>
 							<li><a href="#">Souris </a></li>
@@ -82,13 +82,16 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 							<li><a href="#">Manette </a></li>
 						</ul>
 					</li>
-					<li><a href="product.html">More <i> </i></a>
+					<li><a href="#">More <i> </i></a>
 						<ul>
 							<li><a href="contact.html">Contact</a></li>
 							<li><a href="account.html">Account</a></li>
 							<li><a href="register.html">Register</a></li>
 						</ul>
-					</li>					
+					</li>	
+					<li>
+						<a href="product.html"> Our Products </a>
+					</li>				
 				</ul>				
 				<script type="text/javascript" src="js/nav.js"></script>
 			</div><!-- end h_menu4 -->
