--- a/index.html
+++ b/index.html
@@ -72,20 +72,20 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<div class="h_menu4"><!-- start h_menu4 -->
 				<a class="toggleMenu" href="#">Menu</a>
 				<ul class="nav">
-					<li ><a href="#">Nos PCs <i> </i></a>
+					<li ><a href="#">PCs <i> </i></a>
 						<ul>
 							<li> <a href="#">Desk Office</a></li>
 							<li> <a href="#">Pc Gamer</a></li>
 							<li> <a href="#">Laptops</a></li>
 						</ul>
 					</li>
-					<li><a href="#">Accessoires <i> </i></a>
+					<li><a href="#">Accessories<i> </i></a>
 						<ul>
-							<li><a href="#">Clavier </a></li>
-							<li><a href="#">Souris </a></li>
-							<li><a href="#">Microphone </a></li>
-							<li><a href="#">Casque </a></li>
-							<li><a href="#">Manette </a></li>
+							<li><a href="#">Keyborards </a></li>
+							<li><a href="#">Mouses </a></li>
+							<li><a href="#">Microphones </a></li>
+							<li><a href="#">Headsets</a></li>
+							<li><a href="#">Controllers of Consoles and for PC</a></li>
 						</ul>
 					</li>
 					<li><a href="#">More <i> </i></a>
@@ -253,7 +253,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	</div>
 	
 	<div class="content-bottom">
-		<div class="col-md-8 bottom-content">
+		<div class="col-md-12 bottom-content">
 			<script src="js/responsiveslides.min.js"></script>
 					<script>
 						$(function () {
@@ -290,7 +290,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					</div>
 
 		</div>
-		<div class="col-md-4 bottom-grid">
+		<!-- <div class="col-md-4 bottom-grid">
 		<h4>Latest Sport News</h4>
 			<div class="news">
 				<span>25/07</span>
@@ -331,25 +331,25 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<a href="#" class="view">view all articles</a>
 		</div>
 	<div class="clearfix"> </div>
-	</div>
+	</div> -->
 </div>	
 <!--footer-->
 	<div class="footer">
 		<div class="col-md-3 footer-left">
-			<h4>Sports</h4>
+			<h4>Shortcuts</h4>
 			<div class="run-top">
 				<ul class="run-grid">
 					<li><a href="#">Desk Office</a></li>
 					<li><a href="#">PC Gamer</a></li>
-					<li><a href="#">TRIATHLON</a></li>
-					<li><a href="#">FITNESS</a></li>
-					<li><a href="#">TENNIS</a></li>
-					<li><a href="#">MORE SPORTS</a></li>
+					<li><a href="#">Gaming Laptops</a></li>
+					<li><a href="#">Headsets</a></li>
+					<li><a href="#">Mouses</a></li>
 				</ul>
 				<ul class="run-grid">
-					<li><a href="product.html">STYLE</a></li>
-					<li><a href="product.html">SPECIAL</a></li>
-					<li><a href="product.html">BRAND EVENTS</a></li>
+					<li><a href="#">Keybords</a></li>
+					<li><a href="#">Microphones</a></li>
+					<li><a href="#">Controllers of Consoles and PC</a></li>
+					
 				</ul>
 			<div class="clearfix"> </div>
 			</div>
@@ -361,12 +361,12 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<li><a href="#">News & Events</a></li>
 					<li><a href="#">Community</a></li>
 					<li><a href="#">Videos</a></li>
-					<li><a href="single.html">Shopping</a></li>
+					<li><a href="#">Shopping</a></li>
 					<li><a href="#">Sponsorships</a></li>
-					<li><a href="#">more sports</a></li>
+					<li><a href="#">more </a></li>
 				</ul>
 				<ul class="run-grid">
-					<li><a href="#">Clubs and Training</a></li>
+					<li><a href="#">Clubs</a></li>
 					<li><a href="contact.html">Event Map</a></li>
 					<li><a href="#">Challange the world</a></li>
 				</ul>
@@ -377,7 +377,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<h4>Your Account</h4>
 				<ul class="run-grid-in">
 					<li><a href="account.html">Login</a></li>
-					<li><a href="#">My Sports</a></li>
+					<li><a href="#">My Setup</a></li>
 					<li><a href="#">My Events</a></li>
 				</ul>
 		</div>
@@ -400,5 +400,6 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		</div>
 		<div class="clearfix"> </div>
 	</div>
+
 </body>
 </html>
