--- a/panier.html
+++ b/panier.html
@@ -105,7 +105,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 </div>
 <!---->
 <div class="product-grids">
-	<a href="add-product.html" class="btn btn-primary">Add product</a>
+	<!-- <a href="add-product.html" class="btn btn-primary">Add product</a> -->
 	<div class="container">	
 	<div class="product-top">
 		<div id="products"> </div>
@@ -238,9 +238,6 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		  </div>
 		 </div>
 	  </div>
-	<script src="js/product.js"></script>
-	<script src="js/list-product.js"></script>
-	<script src="js/delete-product.js"></script>
 	<script src="js/panier.js"></script>
 </body>
 </html>
