--- a/panier.html
+++ b/panier.html
@@ -24,7 +24,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700,800' rel='stylesheet' type='text/css'>
 <!-- font awesome link-->
 </head>
-<body onload="storageonload()">
+<body onload="load()">
 <!--header-->
 <div class="line">
 	
