--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<!-- //search-scripts -->
 					
 					<div class="online">
-					<a href="single.html" >SHOP ONLINE</a>
+					<a href="panier.html" >SHOP ONLINE</a>
 					</div>
 					<div class="clearfix"> </div>
 			</div>
