--- a/product.html
+++ b/product.html
@@ -63,7 +63,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<!-- //search-scripts -->
 				
 				<div class="online">
-				<a href="single.html" >SHOP ONLINE</a>
+				<a href="panier.html" >SHOP ONLINE</a>
 				</div>
 				<div class="clearfix"> </div>
 		</div>
@@ -94,7 +94,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						<li><a href="register.html">Register</a></li>
 					</ul>
 				</li>	
-				<li><a href="product.html">Wishlist <i> </i></a>				
+							
 				<li>
 					<a href="product.html"> Our Products </a>
 				</li>				
