--- a/single.html
+++ b/single.html
@@ -64,7 +64,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 						<!-- //search-scripts -->
 						
 						<div class="online">
-						<a href="single.html" >SHOP ONLINE</a>
+						<a href="panier.html" >SHOP ONLINE</a>
 						</div>
 						<div class="clearfix"> </div>
 				</div>
