--- a/panier.html
+++ b/panier.html
@@ -211,5 +211,6 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		<div class="clearfix"> </div>
 	</div>
 	<script src="js/panier.js"></script>
+	<script ></script>
 </body>
 </html>
