--- a/Headsets.html
+++ b/Headsets.html
@@ -24,7 +24,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700,800' rel='stylesheet' type='text/css'>
 <!-- font awesome link-->
 </head>
-<body onload="load()">
+<body onload="showCategories()">
 <!--header-->
 <div class="line">
 	
@@ -72,21 +72,21 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<a class="toggleMenu" href="#">Menu</a>
 			<ul class="nav">
 				<li ><a href="#">PCs <i> </i></a>
-					<ul>
-						<li> <a href="DeskOffice.html" onclick='getBookMark(this)' value='Desk Office'>Desk Office</a></li>
-						<li> <a href="PcGamer.html" onclick='getBookMark(this)' value='PC Gamer'>Pc Gamer</a></li>
-						<li> <a href="Laptops.html" onclick='getBookMark(this)' value='Laptops'>Laptops</a></li>
-					</ul>
-				</li>
-				<li><a href="#">Accessories<i> </i></a>
-					<ul>
-						<li><a href="Keyboards.html" onclick='getBookMark(this)' value='Keyboards'>Keyboards </a></li>
-						<li><a href="Mouses.html"onclick='getBookMark(this)' value='Mouses'>Mouse</a></li>
-						<li><a href="Microphones.html"  onclick='getBookMark(this)' value='Microphone'>Microphones </a></li>
-						<li><a href="Headsets.html"  onclick='getBookMark(this)' value='Headsets'>Headsets</a></li>
-						<li><a href="Controller.html"  onclick='getBookMark(this)' value='Controller'>Controllers</a></li>
-					</ul>
-				</li>
+                    <ul>
+                        <li> <a href="DeskOffice.html" onclick='getBookMark(this)' value='Desk Office'>Desk Office</a></li>
+                        <li> <a href="PcGamer.html" onclick='getBookMark(this)' value='PC Gamer'>Pc Gamer</a></li>
+                        <li> <a href="Laptops.html" onclick='getBookMark(this)' value='Laptops'>Laptops</a></li>
+                    </ul>
+                </li>
+                <li><a href="#">Accessories<i> </i></a>
+                    <ul>
+                        <li><a href="Keyboards.html" onclick='getBookMark(this)' value='Keyboards'>Keyboards </a></li>
+                        <li><a href="Mouses.html"onclick='getBookMark(this)' value='Mouses'>Mouse</a></li>
+                        <li><a href="Microphones.html"  onclick='getBookMark(this)' value='Microphone'>Microphones </a></li>
+                        <li><a href="Headsets.html"  onclick='getBookMark(this)' value='Headsets'>Headsets</a></li>
+                        <li><a href="Controller.html"  onclick='getBookMark(this)' value='Controller'>Controllers</a></li>
+                    </ul>
+                </li>
 						
 			</ul>				
 			<script type="text/javascript" src="js/nav.js"></script>
@@ -172,7 +172,6 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		</div>
 		<div class="clearfix"> </div>
 	</div>
-	<script src="js/panier.js"></script>
-	<script src="js/delete-panier.js" ></script>
+	<script src="js/product.js"></script>
 </body>
 </html>
