--- a/account.html
+++ b/account.html
@@ -37,7 +37,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	<div  class="header-top">
 		<div class="header-grid">
 			<ul class="header-in">
-					<li ><a href="account.html">My Account   </a> </li>
+					<li ><a href="account.html">Login    </a> </li>
 					<li>	
 						<select class="in-drop">
 						  <option value="Dollars" class="in-of">Dollars</option>
@@ -74,30 +74,21 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<ul class="nav">
 				<li ><a href="#">PCs <i> </i></a>
 					<ul>
-						<li> <a href="#">Desk Office</a></li>
-						<li> <a href="#">Pc Gamer</a></li>
-						<li> <a href="#">Laptops</a></li>
+						<li> <a href="DeskOffice.html" onclick='getBookMark(this)' value='Desk Office'>Desk Office</a></li>
+						<li> <a href="PcGamer.html" onclick='getBookMark(this)' value='PC Gamer'>Pc Gamer</a></li>
+						<li> <a href="Laptops.html" onclick='getBookMark(this)' value='Laptops'>Laptops</a></li>
 					</ul>
 				</li>
 				<li><a href="#">Accessories<i> </i></a>
 					<ul>
-						<li><a href="#">Keyborards </a></li>
-						<li><a href="#">Mouses </a></li>
-						<li><a href="#">Microphones </a></li>
-						<li><a href="#">Headsets</a></li>
-						<li><a href="#">Controllers of Consoles and for PC</a></li>
+						<li><a href="Keyboards.html" onclick='getBookMark(this)' value='Keyboards'>Keyboards </a></li>
+						<li><a href="Mouses.html"onclick='getBookMark(this)' value='Mouses'>Mouse</a></li>
+						<li><a href="Microphones.html"  onclick='getBookMark(this)' value='Microphone'>Microphones </a></li>
+						<li><a href="Headsets.html"  onclick='getBookMark(this)' value='Headsets'>Headsets</a></li>
+						<li><a href="Controller.html"  onclick='getBookMark(this)' value='Controller'>Controllers</a></li>
 					</ul>
 				</li>
-				<li><a href="#">More <i> </i></a>
-					<ul>
-						<li><a href="contact.html">Contact</a></li>
-						<li><a href="account.html">Account</a></li>
-						<li><a href="register.html">Register</a></li>
-					</ul>
-				</li>	
-				<li>
-					<a href="product.html"> Our Products </a>
-				</li>			
+						
 			</ul>				
 			<script type="text/javascript" src="js/nav.js"></script>
 		</div><!-- end h_menu4 -->
