--- a/add-product.html
+++ b/add-product.html
@@ -33,12 +33,12 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	</div>
 	<div class="header">
 		<div class="logo">
-			<a href="index.html"><img src="images/nextgenit.png" width="80%" height="auto" style="padding-top: 20px;" alt="" ></a>
+			<a href="indexc.html"><img src="images/nextgenit.png" width="80%" height="auto" style="padding-top: 20px;" alt="" ></a>
 		</div>
 		<div  class="header-top">
 			<div class="header-grid">
 				<ul class="header-in">
-						<li ><a href="account.html">My Account   </a> </li>
+						<li ><a href="account.html">Login    </a> </li>
 						<li>	
 							<select class="in-drop">
 							  <option value="Dollars" class="in-of">Dollars</option>
@@ -75,18 +75,18 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<ul class="nav">
 					<li ><a href="#">PCs <i> </i></a>
 						<ul>
-							<li> <a href="#">Desk Office</a></li>
-							<li> <a href="#">Pc Gamer</a></li>
-							<li> <a href="#">Laptops</a></li>
+							<li> <a href="DeskOffice.html" onclick='getBookMark(this)' value='Desk Office'>Desk Office</a></li>
+							<li> <a href="PcGamer.html" onclick='getBookMark(this)' value='PC Gamer'>Pc Gamer</a></li>
+							<li> <a href="Laptops.html" onclick='getBookMark(this)' value='Laptops'>Laptops</a></li>
 						</ul>
 					</li>
 					<li><a href="#">Accessories<i> </i></a>
 						<ul>
-							<li><a href="#">Keyborards </a></li>
-							<li><a href="#">Mouses </a></li>
-							<li><a href="#">Microphones </a></li>
-							<li><a href="#">Headsets</a></li>
-							<li><a href="#">Controllers of Consoles and for PC</a></li>
+							<li><a href="Keyboards.html" onclick='getBookMark(this)' value='Keyboards'>Keyboards </a></li>
+							<li><a href="Mouses.html"onclick='getBookMark(this)' value='Mouses'>Mouse</a></li>
+							<li><a href="Microphones.html"  onclick='getBookMark(this)' value='Microphone'>Microphones </a></li>
+							<li><a href="Headsets.html"  onclick='getBookMark(this)' value='Headsets'>Headsets</a></li>
+							<li><a href="Controller.html"  onclick='getBookMark(this)' value='Controller'>Controllers</a></li>
 						</ul>
 					</li>
 					<li><a href="#">More <i> </i></a>
@@ -137,6 +137,16 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                 <!-- accept attribut pour selectionner uniquement fichiers images -->
                 <input type="file" class="file-form-control" id="picture" accept="image/*">
               </div>
+			  <select name="categories" id="categories">
+				<option value="Keyboards">Keyboard</option>
+				<option value="Mouses">Mouses</option>
+				<option value="Controller">Controller</option>
+				<option value="Headsets">Headset</option>
+				<option value="PC Gamer">PC Gamer</option>
+				<option value="Laptops">Laptop</option>
+				<option value="Desk Office">Desk Office</option>
+				<option value="Microphone">Microphone</option>
+			  </select>
             <button type="button" class="btn btn-primary" onclick="add()">Add</button>
           </form>
       </div>
