--- a/Microphones.html
+++ b/Microphones.html
@@ -36,7 +36,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	<div  class="header-top">
 		<div class="header-grid">
 			<ul class="header-in">
-					<li ><a href="account.html">Login    </a> </li>
+				<li><span style="color:white"  id="useraccount" ></span> </li>
+				<li ><a href="account.html" onclick="logout()">Disconnect   </a> </li>
 					<li>	
 						<select class="in-drop">
 						  <option value="Dollars" class="in-of">Dollars</option>
@@ -173,5 +174,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		<div class="clearfix"> </div>
 	</div>
 	<script src="js/product.js"></script>
+	<script src="https://unpkg.com/ionicons@5.4.0/dist/ionicons.js"></script>
+	<script src="js/cart.js"></script>
+	<script src="js/login.js"></script>
+
 </body>
 </html>
