--- a/single.html
+++ b/single.html
@@ -37,7 +37,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 			<div  class="header-top">
 				<div class="header-grid">
 					<ul class="header-in">
-							<li ><a href="account.html">Login    </a> </li>
+						<li><span style="color:white"  id="useraccount" ></span> </li>
+						<li ><a href="account.html" onclick="logout()">Disconnect   </a> </li>
 							<li>	
 								<select class="in-drop">
 								  <option value="Dollars" class="in-of">Dollars</option>
