--- a/panier.html
+++ b/panier.html
@@ -36,7 +36,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	<div  class="header-top">
 		<div class="header-grid">
 			<ul class="header-in">
-					<li ><a href="account.html">Login    </a> </li>
+				<li><span style="color:white"  id="useraccount" ></span> </li>
+				<li ><a href="account.html" onclick="logout()">Disconnect   </a> </li>
 					<li>	
 						<select class="in-drop">
 						  <option value="Dollars" class="in-of">Dollars</option>
@@ -97,10 +98,12 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	<div class="clearfix"> </div>
 </div>
 <!---->
-<div class="product-grids">
+<div class="product-grids" onload="load()">
 	<div class="container">	
 	<div class="product-top">
-		<div id="products"> </div>
+		<div id="panier"> 
+
+		</div>
 
 	<div class="clearfix"> </div>
 	</div>
@@ -174,5 +177,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	</div>
 	<script src="js/panier.js"></script>
 	<script src="js/delete-panier.js" ></script>
+	<script src="https://unpkg.com/ionicons@5.4.0/dist/ionicons.js"></script>
+	<script src="js/cart.js"></script>
+	<script src="js/login.js"></script>
 </body>
 </html>
