--- a/product.html
+++ b/product.html
@@ -187,6 +187,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	<script src="js/product.js"></script>
 	<script src="js/list-product.js"></script>
 	<script src="js/delete-product.js"></script>
-	
+	<script src="https://unpkg.com/ionicons@5.4.0/dist/ionicons.js"></script>
+	<script src="js/login.js"></script>
+	<script src="js/cart.js"></script>
 </body>
 </html>
